welcome.lessons.welcome.bat.bool1.Max1020.scala.error
max1020:3: error: ';' expected but 'if' found.
if(a>9&&a<20 || b>9&&b<20){ if(a>9&&a<20&&b<a){return a}if(b>9&&b<20&&a<b){return b}}
                                                        ^