welcome.lessons.welcome.bat.bool1.Max1020.scala.code
def max1020(a:Int, b:Int):Int = {

if(a>9&&a<20 || b>9&&b<20){ if(a>9&&a<20&&b<a){return a}if(b>9&&b<20&&a<b){return b}}
else{return 0}
}